compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__return_expr__return_boolean_values.snap
---
source: compiler-core/src/javascript/tests/return_expr.rs
expression: "\npub fn return_true() {\n  $return True\n}\n\npub fn return_false() {\n  $return False\n}\n"
---
----- SOURCE CODE

pub fn return_true() {
  $return True
}

pub fn return_false() {
  $return False
}


----- COMPILED JAVASCRIPT
export function return_true() {
  return true;
}

export function return_false() {
  return false;
}
