compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__return_expr__return_in_deeply_nested_context.snap
---
source: compiler-core/src/javascript/tests/return_expr.rs
expression: "\npub fn deeply_nested(x) {\n  case x {\n    0 -> {\n      let y = 1\n      case y {\n        1 -> {\n          let z = 2\n          case z > 0 {\n            True -> $return z * 10\n            False -> z\n          }\n        }\n        _ -> y\n      }\n    }\n    _ -> x\n  }\n}\n"
---
----- SOURCE CODE

pub fn deeply_nested(x) {
  case x {
    0 -> {
      let y = 1
      case y {
        1 -> {
          let z = 2
          case z > 0 {
            True -> $return z * 10
            False -> z
          }
        }
        _ -> y
      }
    }
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
export function deeply_nested(x) {
  if (x === 0) {
    let y = 1;
    if (y === 1) {
      let z = 2;
      let $ = z > 0;
      if ($) {
        return z * 10;
      } else {
        return z;
      }
    } else {
      return y;
    }
  } else {
    return x;
  }
}
